Adding some print CSS to disable elements that don't make sense to print

--- a/content/extra/custom.css
+++ b/content/extra/custom.css
@@ -4,3 +4,10 @@
 @media (min-width: 768px) { #wrapper { padding-left: 300px; } }
 @media (min-width: 768px) { #menu-toggle { left: 280px; } }
 .sidebar-nav { width: 300px; }
+
+@media print {
+     #menu-toggle { display: none; }
+     #sidebar-wrapper { display: none; }
+     #sidebar-wrapper-small { display: none; }
+     .pagination { display: none; }
+}
